tests/ui/common/function_missing_function.stderr
error: positional hook target must come before named arguments
 --> tests/ui/common/function_missing_function.rs:3:35
  |
3 | #[hook::function(optional = true, "puts")]
  |                                   ^^^^^^
